	  pins were being used.
	* arch/arm/src/stm32/chip/stm32f10xxx_gpio.h: Correct offset to one AFIO EXICR
	  register.
	* arch/arm/src/lpc17xx/lpc17_can.c:  Added "advanced" configuration options
	  to specify the CAN TSEG1 and TSEG2 clock counts specifically.
	* include/nuttx/can.h and drivers/can.c:  Add support for extended (29-bit)
	  CAN IDs.
	* arch/arm/src/lpc17xx/lpc17_can.c:  Add support for extended (29-bit) CAN IDs.
	* arch/arm/src/stm32/stm32_can.c:  Add support for extended (29-bit) CAN IDs.
	* include/nuttx/power/pm.h:  Move include/nuttx/pm.h into a sub-directory named
	  power.
	* drivers/power:  Rename the drivers/pm directory to power
	* include/power/battery.h and drivers/battery.c:  Add the interface definitions
	  for an upper and lower half battery driver.  Add the implementation of the
	  common upper half battery driver.
	* drivers/power/max1704x.c:  Add a driver for MAX17040x battery "fuel guage"
	* arch/arm/src/stm32/stm32_i2c.c: Add support for I2C3
	* drivers/usbdev/: Lots of name changes: cdc_serial->cdcacm, usbstrg->usbmsc, 
	  usbser->pl2303
	* drivers/usbdev/composite: Fleshed out support for a composite USB device.
	* drivers/stm3210e-eval/composite and drivers/stm3210e-eval/src/up_composite.c:
	  Add a configuration test the USB composite device.
	* include/nuttx/usb/usb.h, drivers/usbdev/composite_descriptors.c, and
	  drivers/usbdev/cdcacm_descriptors.c:  Add support for the USB Interface
	  Association Descriptor (IAD)
	* arch/arm/src/stm32/stm32_i2c.c: Correct a typo in STM32 I2C3 support
	  (submitted by Mike Smith)
	* arch/*/src/Makefile:  Candidate solution for dependency issue in the board
	  sub-directory:  By making libboard.a a "phony" target, libboard.a should
	  always rebuilt (the end result is worth the small increase in build time)
	  (submitted by Mike Smith).
	* include/net/psock.h:  Added a new low level socket interface that allows the
	  OS to use the socket interface without having a socket descriptor.